# uncanny_tree_felling_chase

./: Cargo.toml  README.md
assets/: atlas_definition.ron  atlas_scheme.ron  day_night_cycle_mat.ron  main_atlas.ron  post_process_day_night_cycle.frag  post_process_shared.vert  ui_atlas.ron  uncanny_atlas.ron  unit_sprites.ron  units_config.ron  vertex_shader.ron
macro-tiler/: Cargo.toml
macro-tiler/src/: lib.rs  utility.rs
macro-tiler/src/atlas/: draw_command.rs  mod.rs  rect.rs  rect_handle.rs
macro-tiler/src/blitting/: mod.rs  raw_image.rs
macro-tiler/src/materials/: mod.rs
src/: atlas_serialization.rs  forest.rs  game_assets.rs  main.rs  rendering.rs  tilemap.rs  types.rs
src/components/: mod.rs
src/core_subsystems/: animation_configuration.rs  atlas_serialization.rs  forest.rs  mod.rs  passability_utils.rs  peek_utils.rs  player_landing_info.rs  rendering.rs  signal_utils.rs  tilemap.rs  types.rs  ui_layouts.rs  units_serialization.rs
src/systems/: cleanup_signals.rs  debug_picking.rs  mod.rs  scene_composition.rs
src/systems/gameplay/: button_system.rs  eradicate_orcs.rs  glyph_fade.rs  mod.rs  player_orc_landing.rs  prepare_landing_occupation.rs  update_landing_ui.rs  update_pasability_map.rs
src/systems/rendering/: forest.rs  forest_transparent.rs  menu_screens.rs  mod.rs  orc_visualization.rs  player_landing_helper_grid.rs  tilemap.rs  ui_main_menu.rs  ui_overlay_main.rs  ui_shared.rs
