[package]
name = "uncanny_tree_felling_chase"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-tiled-wfc = "0.7.7"
macroquad = "0.3.8"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.4"
image = "0.23.14"
hecs = "0.6.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
