[package]
name = "macro-tiler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.8"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.4"
image = "0.23.14"
bytemuck = "1.7.2"
guillotiere = "0.6.2"
naga = { version = "0.6", features = ["wgsl-in", "glsl-out"] }
thiserror = "1.0"